--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ ES_HOST=http://192.168.0.210:30034
 ES_USERNAME=elastic
 ES_PASSWORD=sEbret-wodxob-5kicjo
 TELEGRAM_BOT_TOKEN=6897351570:AAHYbXWF7u-oCNv8ZawNBcwMK3rZn7v65OE
-WHITELIST_DB=db/whitelist.db
+USER_DB=db\users.db
 DEFAULT_ADMIN=dam2452
