--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,7 @@
 /RANCZO-TRANSKRYPCJE/
 /RANCZO-WIDEO/
+/OLD/
+/STARE RANCZ WIDEO/
 /passwords.env
 /.venv
 /new_venv
@@ -9,10 +11,11 @@
 *.log
 /DataModify
 /cache
-/cache
 /__pycache__
 *.mp4
-/__pycache__
 *.cutree
-/__pycache__
-/__pycache__
+.env
+log.txt
+preprocessing_video.py
+
+
