seems like working

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-ffmpeg-python
-elasticsearch
-urllib3
-python-dotenv
-requests
-tabulate
-Retry
-psycopg2-binary
-aiogram
-asyncpg
-pydantic-settings
-pydantic
+ffmpeg==1.4
+elasticsearch~=8.14
+urllib3~=2.2
+python-dotenv>=1
+requests~=2.31
+tabulate~=0.9
+Retry~=0.9
+psycopg2-binary~=2.9
+aiogram~=3.10
+asyncpg~=0.29
+pydantic-settings~=2.3
+pydantic~=2.8
