--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,5 @@
 fail_fast: false
+exclude: '^(RANCZO-WIDEO/|RANCZO-TRANSKRYPCJE/)'
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
