--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 ffmpeg==1.4
 elasticsearch~=8.14
-urllib3~=2.2
+urllib3~=2.0.7
 python-dotenv>=1
 requests~=2.31
 tabulate~=0.9
 Retry~=0.9
 psycopg2-binary~=2.9
-aiogram~=3.10
+aiogram~=3.8.0
 asyncpg~=0.29
 pydantic-settings~=2.3
-pydantic~=2.8
+pydantic~=2.7.4
+pytest~=8.3.2
+Telethon~=1.37
