--- a/bot/tests/e2e_tests/pytest.ini
+++ b/bot/tests/e2e_tests/pytest.ini
@@ -1,2 +1,8 @@
 [pytest]
 asyncio_default_fixture_loop_scope = function
+
+markers =
+    long: marks long-running tests
+    quick: marks quick tests
+
+addopts = --strict-markers
