--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ video_data_1
 *.session
 /bot/tests/e2e_tests/expected_files
 /bot/tests/expected
+/bot/tests/expected/expected_files
+/bot/tests/expected
