--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 ffmpeg==1.4
 elasticsearch~=8.14
-urllib3~=2.2
+urllib3~=2.2.2
 python-dotenv>=1
 requests~=2.31
 tabulate~=0.9
 Retry~=0.9
 psycopg2-binary~=2.9
-aiogram~=3.10
+aiogram~=3.15.0
 asyncpg~=0.29
 pydantic-settings~=2.3
-pydantic~=2.8
+pydantic~=2.10.3
+pytest~=8.3.2
+Telethon~=1.37
+elastic-transport~=8.15.1
