--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ Test Results - .html
 bot/tests/received_file.txt
 /bot/KIEPSCY-TRANSKRYPCJE
 /test_trans
+/bot/KIEPSCY-TRANSKRYPCJE_OLD
+/asdfgh
+/asdfgh
