--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ bot/tests/received_file.txt
 /bot/KIEPSCY-TRANSKRYPCJE_OLD
 /asdfgh
 /asdfgh
+elsticKIEP
+elsticRANCZO
+Preprocessing/DataExtractionFromWiki/EpisodeInfoKIEPSCY.json
