--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ bot/tests/received_file.txt
 elsticKIEP
 elsticRANCZO
 Preprocessing/DataExtractionFromWiki/EpisodeInfoKIEPSCY.json
+Preprocessing/DataExtractionFromWiki/EpisodeInfo.json
