--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,8 @@
 /RANCZO-WIDEO/
 /bot/RANCZO-TRANSKRYPCJE/
 /bot/RANCZO-WIDEO/
+/bot/KIEPSCY-WIDEO/
+/bot/KIEPSCY-TRANSKRYPCJE/
 /OLD/
 /STARE RANCZ WIDEO/
 /passwords.env
